ENH: Test for ImageRegion added.

--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -33,6 +33,7 @@ ADD_TEST(itkImageAdaptorTest itkImageAdaptorTest)
 ADD_TEST(itkImageIteratorTest itkImageIteratorTest)
 ADD_TEST(itkImageIteratorsForwardBackwardTest itkImageIteratorsForwardBackwardTest)
 ADD_TEST(itkImageLinearIteratorTest itkImageLinearIteratorTest)
+ADD_TEST(itkImageRegionTest itkImageRegionTest)
 ADD_TEST(itkImageSliceIteratorTest itkImageSliceIteratorTest)
 ADD_TEST(itkIteratorTests itkIteratorTests)
 ADD_TEST(itkMatrixTest itkMatrixTest)
@@ -88,6 +89,7 @@ ADD_EXECUTABLE(itkImageAdaptorTest itkImageAdaptorTest)
 ADD_EXECUTABLE(itkImageIteratorTest itkImageIteratorTest)
 ADD_EXECUTABLE(itkImageIteratorsForwardBackwardTest itkImageIteratorsForwardBackwardTest)
 ADD_EXECUTABLE(itkImageLinearIteratorTest itkImageLinearIteratorTest)
+ADD_EXECUTABLE(itkImageRegionTest itkImageRegionTest)
 ADD_EXECUTABLE(itkImageSliceIteratorTest itkImageSliceIteratorTest)
 ADD_EXECUTABLE(itkIteratorTests itkIteratorTests)
 ADD_EXECUTABLE(itkMatrixTest itkMatrixTest)
