ENH: look fr ITK_DATA_ROOT.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ INCLUDE (${CMAKE_ROOT}/Modules/Dart.cmake)
 IF (BUILD_TESTING)
   SUBDIRS(Testing)
   CONFIGURE_FILE(${ITK_SOURCE_DIR}/InsightLogo.gif ${ITK_BINARY_DIR}/Testing/HTML/TestingResults/Icons/Logo.gif COPYONLY)
+FIND_PATH (ITK_DATA_ROOT ITKData.readme ${ITK_SOURCE_DIR}/Testing/Data $ENV{ITK_DATA_ROOT})
 ENDIF (BUILD_TESTING)
 
 CONFIGURE_FILE(${ITK_SOURCE_DIR}/UseITK.cmake
