ERR: test needed additioinal argument.

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -35,7 +35,7 @@ ADD_TEST(itkBinaryDilateImageFilterTest itkBinaryDilateImageFilterTest)
 ADD_TEST(itkBinaryMagnitudeImageFilterTest itkBinaryMagnitudeImageFilterTest)
 ADD_TEST(itkBloxBoundaryPointImageTest itkBloxBoundaryPointImageTest)
 ADD_TEST(itkBloxCoreAtomTest itkBloxCoreAtomTest)
-ADD_TEST(itkConnectedThresholdImageFilterTest itkConnectedThresholdImageFilterTest ${ITK_DATA_ROOT}/Input/cthead1.png)
+ADD_TEST(itkConnectedThresholdImageFilterTest itkConnectedThresholdImageFilterTest ${ITK_DATA_ROOT}/Input/cthead1.png ${ITK_DATA_ROOT}/Baseline/BasicFilters/ConnectedThresholdImageFilter.png)
 ADD_TEST(itkCosImageFilterAndAdaptorTest itkCosImageFilterAndAdaptorTest)
 ADD_TEST(itkCurvatureAnisotropicDiffusionImageFilterTest itkCurvatureAnisotropicDiffusionImageFilterTest)
 ADD_TEST(itkCyclicReferences itkCyclicReferences)
