ENH: Merge from release-0_5-beta-merge1 tag.

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -73,6 +73,7 @@ ADD_TEST(itkWrapPadImageTest itkWrapPadImageTest)
 ADD_TEST(itkMirrorPadImageTest itkMirrorPadImageTest)
 ADD_TEST(itkExtractImageTest itkExtractImageTest)
 ADD_TEST(itkSinImageFilterAndAdaptorTest itkSinImageFilterAndAdaptorTest)
+ADD_TEST(itkSpatialFunctionImageEvaluatorFilterTest itkSpatialFunctionImageEvaluatorFilterTest)
 ADD_TEST(itkSqrtImageFilterAndAdaptorTest itkSqrtImageFilterAndAdaptorTest)
 ADD_TEST(itkStreamingImageFilterTest itkStreamingImageFilterTest)
 ADD_TEST(itkStreamingImageFilterTest2 itkStreamingImageFilterTest2)
@@ -152,6 +153,7 @@ ADD_EXECUTABLE(itkConstantPadImageTest itkConstantPadImageTest)
 ADD_EXECUTABLE(itkWrapPadImageTest itkWrapPadImageTest)
 ADD_EXECUTABLE(itkMirrorPadImageTest itkMirrorPadImageTest)
 ADD_EXECUTABLE(itkExtractImageTest itkExtractImageTest)
+ADD_EXECUTABLE(itkSpatialFunctionImageEvaluatorFilterTest itkSpatialFunctionImageEvaluatorFilterTest)
 ADD_EXECUTABLE(itkStreamingImageFilterTest itkStreamingImageFilterTest)
 ADD_EXECUTABLE(itkStreamingImageFilterTest2 itkStreamingImageFilterTest2)
 ADD_EXECUTABLE(itkSinImageFilterAndAdaptorTest itkSinImageFilterAndAdaptorTest)
