--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -35,6 +35,7 @@ ADD_TEST(itkBinaryDilateImageFilterTest itkBinaryDilateImageFilterTest)
 ADD_TEST(itkBinaryMagnitudeImageFilterTest itkBinaryMagnitudeImageFilterTest)
 ADD_TEST(itkBloxBoundaryPointImageTest itkBloxBoundaryPointImageTest)
 ADD_TEST(itkBloxCoreAtomTest itkBloxCoreAtomTest)
+ADD_TEST(itkConfidenceConnectedImageFilterTest itkConfidenceConnectedImageFilterTest ${ITK_DATA_ROOT}/Input/cthead1.png ${ITK_DATA_ROOT}/Baseline/BasicFilters/ConfidenceConnectedImageFilter.png)
 ADD_TEST(itkConnectedThresholdImageFilterTest itkConnectedThresholdImageFilterTest ${ITK_DATA_ROOT}/Input/cthead1.png ${ITK_DATA_ROOT}/Baseline/BasicFilters/ConnectedThresholdImageFilter.png)
 ADD_TEST(itkCosImageFilterAndAdaptorTest itkCosImageFilterAndAdaptorTest)
 ADD_TEST(itkCurvatureAnisotropicDiffusionImageFilterTest itkCurvatureAnisotropicDiffusionImageFilterTest)
@@ -116,6 +117,7 @@ ADD_EXECUTABLE(itkBinaryDilateImageFilterTest itkBinaryDilateImageFilterTest)
 ADD_EXECUTABLE(itkBinaryMagnitudeImageFilterTest itkBinaryMagnitudeImageFilterTest)
 ADD_EXECUTABLE(itkBloxBoundaryPointImageTest itkBloxBoundaryPointImageTest)
 ADD_EXECUTABLE(itkBloxCoreAtomTest itkBloxCoreAtomTest)
+ADD_EXECUTABLE(itkConfidenceConnectedImageFilterTest itkConfidenceConnectedImageFilterTest)
 ADD_EXECUTABLE(itkConnectedThresholdImageFilterTest itkConnectedThresholdImageFilterTest)
 ADD_EXECUTABLE(itkCosImageFilterAndAdaptorTest itkCosImageFilterAndAdaptorTest)
 ADD_EXECUTABLE(itkCurvatureAnisotropicDiffusionImageFilterTest itkCurvatureAnisotropicDiffusionImageFilterTest)
