ENH: added test.

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -44,6 +44,7 @@ ADD_TEST(itkDanielssonDistanceMapImageFilterTest itkDanielssonDistanceMapImageFi
 ADD_TEST(itkDifferenceOfGaussiansGradientTest itkDifferenceOfGaussiansGradientTest)
 ADD_TEST(itkEdgePotentialImageFilterTest itkEdgePotentialImageFilterTest)
 ADD_TEST(itkEigenAnalysis2DImageFilterTest itkEigenAnalysis2DImageFilterTest)
+ADD_TEST(itkIsolatedConnectedImageFilterTest itkIsolatedConnectedImageFilterTest ${ITK_DATA_ROOT}/Input/cthead1.png ${ITK_DATA_ROOT}/Baseline/BasicFilters/IsolatedConnectedImageFilter.png)
 ADD_TEST(itkExpImageFilterAndAdaptorTest itkExpImageFilterAndAdaptorTest)
 ADD_TEST(itkExpandImageFilterTest itkExpandImageFilterTest)
 ADD_TEST(itkVectorExpandImageFilterTest itkVectorExpandImageFilterTest)
@@ -126,6 +127,7 @@ ADD_EXECUTABLE(itkDanielssonDistanceMapImageFilterTest itkDanielssonDistanceMapI
 ADD_EXECUTABLE(itkDifferenceOfGaussiansGradientTest itkDifferenceOfGaussiansGradientTest)
 ADD_EXECUTABLE(itkEdgePotentialImageFilterTest itkEdgePotentialImageFilterTest)
 ADD_EXECUTABLE(itkEigenAnalysis2DImageFilterTest itkEigenAnalysis2DImageFilterTest)
+ADD_EXECUTABLE(itkIsolatedConnectedImageFilterTest itkIsolatedConnectedImageFilterTest)
 ADD_EXECUTABLE(itkExpImageFilterAndAdaptorTest itkExpImageFilterAndAdaptorTest)
 ADD_EXECUTABLE(itkExpandImageFilterTest itkExpandImageFilterTest)
 ADD_EXECUTABLE(itkVectorExpandImageFilterTest itkVectorExpandImageFilterTest)
