--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -61,6 +61,7 @@ ADD_TEST(itkInteriorExteriorMeshFilterTest itkInteriorExteriorMeshFilterTest )
 ADD_TEST(itkJoinImageFilerTest itkJoinImageFilterTest)
 ADD_TEST(itkLog10ImageFilterAndAdaptorTest itkLog10ImageFilterAndAdaptorTest)
 ADD_TEST(itkLogImageFilterAndAdaptorTest itkLogImageFilterAndAdaptorTest)
+ADD_TEST(itkMeanImageFilterTest itkMeanImageFilterTest)
 ADD_TEST(itkMedianImageFilterTest itkMedianImageFilterTest)
 ADD_TEST(itkMultiplyImageFilterTest itkMultiplyImageFilterTest)
 ADD_TEST(itkMinimumMaximumImageFilterTest itkMinimumMaximumImageFilterTest)
@@ -144,6 +145,7 @@ ADD_EXECUTABLE(itkInteriorExteriorMeshFilterTest itkInteriorExteriorMeshFilterTe
 ADD_EXECUTABLE(itkJoinImageFilterTest itkJoinImageFilterTest)
 ADD_EXECUTABLE(itkLog10ImageFilterAndAdaptorTest itkLog10ImageFilterAndAdaptorTest)
 ADD_EXECUTABLE(itkLogImageFilterAndAdaptorTest itkLogImageFilterAndAdaptorTest)
+ADD_EXECUTABLE(itkMeanImageFilterTest itkMeanImageFilterTest)
 ADD_EXECUTABLE(itkMedianImageFilterTest itkMedianImageFilterTest)
 ADD_EXECUTABLE(itkMultiplyImageFilterTest itkMultiplyImageFilterTest)
 ADD_EXECUTABLE(itkMinimumMaximumImageFilterTest itkMinimumMaximumImageFilterTest)
