ERR: misspelled regression test image names.

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -35,8 +35,8 @@ ADD_TEST(itkBinaryDilateImageFilterTest itkBinaryDilateImageFilterTest)
 ADD_TEST(itkBinaryMagnitudeImageFilterTest itkBinaryMagnitudeImageFilterTest)
 ADD_TEST(itkBloxBoundaryPointImageTest itkBloxBoundaryPointImageTest)
 ADD_TEST(itkBloxCoreAtomTest itkBloxCoreAtomTest)
-ADD_TEST(itkConfidenceConnectedImageFilterTest itkConfidenceConnectedImageFilterTest ${ITK_DATA_ROOT}/Input/cthead1.png ${ITK_DATA_ROOT}/Baseline/BasicFilters/ConfidenceConnectedImageFilter.png)
-ADD_TEST(itkConnectedThresholdImageFilterTest itkConnectedThresholdImageFilterTest ${ITK_DATA_ROOT}/Input/cthead1.png ${ITK_DATA_ROOT}/Baseline/BasicFilters/ConnectedThresholdImageFilter.png)
+ADD_TEST(itkConfidenceConnectedImageFilterTest itkConfidenceConnectedImageFilterTest ${ITK_DATA_ROOT}/Input/cthead1.png ${ITK_DATA_ROOT}/Baseline/BasicFilters/ConfidenceConnectedImageFilterTest.png)
+ADD_TEST(itkConnectedThresholdImageFilterTest itkConnectedThresholdImageFilterTest ${ITK_DATA_ROOT}/Input/cthead1.png ${ITK_DATA_ROOT}/Baseline/BasicFilters/ConnectedThresholdImageFilterTest.png)
 ADD_TEST(itkCosImageFilterAndAdaptorTest itkCosImageFilterAndAdaptorTest)
 ADD_TEST(itkCurvatureAnisotropicDiffusionImageFilterTest itkCurvatureAnisotropicDiffusionImageFilterTest)
 ADD_TEST(itkCyclicReferences itkCyclicReferences)
@@ -44,7 +44,7 @@ ADD_TEST(itkDanielssonDistanceMapImageFilterTest itkDanielssonDistanceMapImageFi
 ADD_TEST(itkDifferenceOfGaussiansGradientTest itkDifferenceOfGaussiansGradientTest)
 ADD_TEST(itkEdgePotentialImageFilterTest itkEdgePotentialImageFilterTest)
 ADD_TEST(itkEigenAnalysis2DImageFilterTest itkEigenAnalysis2DImageFilterTest)
-ADD_TEST(itkIsolatedConnectedImageFilterTest itkIsolatedConnectedImageFilterTest ${ITK_DATA_ROOT}/Input/cthead1.png ${ITK_DATA_ROOT}/Baseline/BasicFilters/IsolatedConnectedImageFilter.png)
+ADD_TEST(itkIsolatedConnectedImageFilterTest itkIsolatedConnectedImageFilterTest ${ITK_DATA_ROOT}/Input/cthead1.png ${ITK_DATA_ROOT}/Baseline/BasicFilters/IsolatedConnectedImageFilterTest.png)
 ADD_TEST(itkExpImageFilterAndAdaptorTest itkExpImageFilterAndAdaptorTest)
 ADD_TEST(itkExpandImageFilterTest itkExpandImageFilterTest)
 ADD_TEST(itkVectorExpandImageFilterTest itkVectorExpandImageFilterTest)
@@ -65,6 +65,7 @@ ADD_TEST(itkMeanImageFilterTest itkMeanImageFilterTest)
 ADD_TEST(itkMedianImageFilterTest itkMedianImageFilterTest)
 ADD_TEST(itkMultiplyImageFilterTest itkMultiplyImageFilterTest)
 ADD_TEST(itkMinimumMaximumImageFilterTest itkMinimumMaximumImageFilterTest)
+ADD_TEST(itkNeighborhoodConnectedImageFilterTest itkNeighborhoodConnectedImageFilterTest ${ITK_DATA_ROOT}/Input/cthead1.png ${ITK_DATA_ROOT}/Baseline/BasicFilters/ConfidenceConnectedImageFilter.png)
 ADD_TEST(itkPlaheImageFilterTest itkPlaheImageFilterTest)
 ADD_TEST(itkReflectiveImageRegionIteratorTest  itkReflectiveImageRegionIteratorTest )
 ADD_TEST(itkReflectImageFilterTest itkReflectImageFilterTest)
@@ -149,6 +150,7 @@ ADD_EXECUTABLE(itkMeanImageFilterTest itkMeanImageFilterTest)
 ADD_EXECUTABLE(itkMedianImageFilterTest itkMedianImageFilterTest)
 ADD_EXECUTABLE(itkMultiplyImageFilterTest itkMultiplyImageFilterTest)
 ADD_EXECUTABLE(itkMinimumMaximumImageFilterTest itkMinimumMaximumImageFilterTest)
+ADD_EXECUTABLE(itkNeighborhoodConnectedImageFilterTest itkNeighborhoodConnectedImageFilterTest)
 ADD_EXECUTABLE(itkPlaheImageFilterTest itkPlaheImageFilterTest)
 ADD_EXECUTABLE(itkReflectImageFilterTest itkReflectImageFilterTest)
 ADD_EXECUTABLE(itkReflectiveImageRegionIteratorTest itkReflectiveImageRegionIteratorTest )
