--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -34,6 +34,7 @@ ADD_TEST(itkImageIteratorTest itkImageIteratorTest)
 ADD_TEST(itkImageIteratorsForwardBackwardTest itkImageIteratorsForwardBackwardTest)
 ADD_TEST(itkImageLinearIteratorTest itkImageLinearIteratorTest)
 ADD_TEST(itkImageRegionTest itkImageRegionTest)
+ADD_TEST(itkImageRegionExclusionIteratorWithIndexTest itkImageRegionExclusionIteratorWithIndexTest)
 ADD_TEST(itkImageSliceIteratorTest itkImageSliceIteratorTest)
 ADD_TEST(itkIteratorTests itkIteratorTests)
 ADD_TEST(itkMatrixTest itkMatrixTest)
@@ -90,6 +91,7 @@ ADD_EXECUTABLE(itkImageIteratorTest itkImageIteratorTest)
 ADD_EXECUTABLE(itkImageIteratorsForwardBackwardTest itkImageIteratorsForwardBackwardTest)
 ADD_EXECUTABLE(itkImageLinearIteratorTest itkImageLinearIteratorTest)
 ADD_EXECUTABLE(itkImageRegionTest itkImageRegionTest)
+ADD_EXECUTABLE(itkImageRegionExclusionIteratorWithIndexTest itkImageRegionExclusionIteratorWithIndexTest)
 ADD_EXECUTABLE(itkImageSliceIteratorTest itkImageSliceIteratorTest)
 ADD_EXECUTABLE(itkIteratorTests itkIteratorTests)
 ADD_EXECUTABLE(itkMatrixTest itkMatrixTest)
