--- a/Code/IO/CMakeLists.txt
+++ b/Code/IO/CMakeLists.txt
@@ -15,6 +15,15 @@ itkVTKImageIOFactory
 itkVTKImageIO
 )
 
+IF(WIN32)
+  IF(BUILD_SHARED_LIBS)
+    ADD_DEFINITIONS(-DPNG_BUILD_DLL -DZLIB_DLL -DPNG_NO_MODULEDEF)
+  ELSE(BUILD_SHARED_LIBS)
+    SET(PNG_STATIC 1)
+    ADD_DEFINITIONS(-DPNG_STATIC)
+  ENDIF(BUILD_SHARED_LIBS)
+ENDIF(WIN32)
+
 # Add ITKIO library
 ADD_LIBRARY(ITKIO ITKIO_SRCS)
 TARGET_LINK_LIBRARIES(ITKIO ITKCommon itkpng itkzlib)
