ENH: Test for PointCast (casting between itk::Points) was added.

--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -46,6 +46,7 @@ ADD_TEST(itkNeighborhoodTest itkNeighborhoodTest)
 ADD_TEST(itkNeighborhoodIteratorTest itkNeighborhoodIteratorTest)
 ADD_TEST(itkNeighborhoodOperatorTest itkNeighborhoodOperatorTest)
 ADD_TEST(itkPixelAccessTest itkPixelAccessTest)
+ADD_TEST(itkPointCastTest itkPointCastTest)
 ADD_TEST(itkPointGeometryTest itkPointGeometryTest)
 ADD_TEST(itkPointSetTest itkPointSetTest)
 ADD_TEST(itkRandomAccessNeighborhoodIteratorTest itkRandomAccessNeighborhoodIteratorTest)
@@ -103,6 +104,7 @@ ADD_EXECUTABLE(itkNeighborhoodTest itkNeighborhoodTest)
 ADD_EXECUTABLE(itkNeighborhoodIteratorTest itkNeighborhoodIteratorTest)
 ADD_EXECUTABLE(itkNeighborhoodOperatorTest itkNeighborhoodOperatorTest)
 ADD_EXECUTABLE(itkPixelAccessTest itkPixelAccessTest)
+ADD_EXECUTABLE(itkPointCastTest itkPointCastTest)
 ADD_EXECUTABLE(itkPointGeometryTest itkPointGeometryTest)
 ADD_EXECUTABLE(itkPointSetTest itkPointSetTest)
 ADD_EXECUTABLE(itkRigid3DTransformTest itkRigid3DTransformTest)
