ENH: Added itkChangeInformationImageFilterTest.

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -35,6 +35,7 @@ ADD_TEST(itkBinaryDilateImageFilterTest itkBinaryDilateImageFilterTest)
 ADD_TEST(itkBinaryMagnitudeImageFilterTest itkBinaryMagnitudeImageFilterTest)
 ADD_TEST(itkBloxBoundaryPointImageTest itkBloxBoundaryPointImageTest)
 ADD_TEST(itkBloxCoreAtomTest itkBloxCoreAtomTest)
+ADD_TEST(itkChangeInformationImageFilterTest itkChangeInformationImageFilterTest)
 ADD_TEST(itkConfidenceConnectedImageFilterTest itkConfidenceConnectedImageFilterTest ${ITK_DATA_ROOT}/Input/cthead1.png ${ITK_DATA_ROOT}/Baseline/BasicFilters/ConfidenceConnectedImageFilterTest.png)
 ADD_TEST(itkConnectedThresholdImageFilterTest itkConnectedThresholdImageFilterTest ${ITK_DATA_ROOT}/Input/cthead1.png ${ITK_DATA_ROOT}/Baseline/BasicFilters/ConnectedThresholdImageFilterTest.png)
 ADD_TEST(itkCosImageFilterAndAdaptorTest itkCosImageFilterAndAdaptorTest)
@@ -104,6 +105,7 @@ ADD_TEST(itkSobelEdgeDetectionImageFilterTest itkSobelEdgeDetectionImageFilterTe
 ADD_TEST(itkZeroCrossingBasedEdgeDetectionImageFilterTest itkZeroCrossingBasedEdgeDetectionImageFilterTest)
 ADD_TEST(itkCannyEdgeDetectionImageFilterTest itkCannyEdgeDetectionImageFilterTest)
 
+ADD_EXECUTABLE(itkChangeInformationImageFilterTest itkChangeInformationImageFilterTest)
 ADD_EXECUTABLE(itkCannyEdgeDetectionImageFilterTest itkCannyEdgeDetectionImageFilterTest)
 ADD_EXECUTABLE(itkZeroCrossingBasedEdgeDetectionImageFilterTest itkZeroCrossingBasedEdgeDetectionImageFilterTest)
 ADD_EXECUTABLE(itkSobelEdgeDetectionImageFilterTest itkSobelEdgeDetectionImageFilterTest)
