--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -67,6 +67,7 @@ ADD_TEST(itkMedianImageFilterTest itkMedianImageFilterTest)
 ADD_TEST(itkMultiplyImageFilterTest itkMultiplyImageFilterTest)
 ADD_TEST(itkMinimumMaximumImageFilterTest itkMinimumMaximumImageFilterTest)
 ADD_TEST(itkNeighborhoodConnectedImageFilterTest itkNeighborhoodConnectedImageFilterTest ${ITK_DATA_ROOT}/Input/cthead1.png ${ITK_DATA_ROOT}/Baseline/BasicFilters/NeighborhoodConnectedImageFilterTest.png)
+ADD_TEST(itkPermuteAxesImageFilterTest itkPermuteAxesImageFilterTest)
 ADD_TEST(itkPlaheImageFilterTest itkPlaheImageFilterTest)
 ADD_TEST(itkReflectiveImageRegionIteratorTest  itkReflectiveImageRegionIteratorTest )
 ADD_TEST(itkReflectImageFilterTest itkReflectImageFilterTest)
@@ -153,6 +154,7 @@ ADD_EXECUTABLE(itkMedianImageFilterTest itkMedianImageFilterTest)
 ADD_EXECUTABLE(itkMultiplyImageFilterTest itkMultiplyImageFilterTest)
 ADD_EXECUTABLE(itkMinimumMaximumImageFilterTest itkMinimumMaximumImageFilterTest)
 ADD_EXECUTABLE(itkNeighborhoodConnectedImageFilterTest itkNeighborhoodConnectedImageFilterTest)
+ADD_EXECUTABLE(itkPermuteAxesImageFilterTest itkPermuteAxesImageFilterTest)
 ADD_EXECUTABLE(itkPlaheImageFilterTest itkPlaheImageFilterTest)
 ADD_EXECUTABLE(itkReflectImageFilterTest itkReflectImageFilterTest)
 ADD_EXECUTABLE(itkReflectiveImageRegionIteratorTest itkReflectiveImageRegionIteratorTest )
