ENH: added itkStatisticsImageFilterTest.

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -74,6 +74,7 @@ ADD_TEST(itkReflectImageFilterTest itkReflectImageFilterTest)
 ADD_TEST(itkResampleImageTest itkResampleImageTest)
 ADD_TEST(itkRecursiveGaussianImageFiltersTest itkRecursiveGaussianImageFiltersTest)
 ADD_TEST(itkShrinkImageTest itkShrinkImageTest)
+ADD_TEST(itkStatisticsImageFilterTest itkStatisticsImageFilterTest)
 ADD_TEST(itkConstantPadImageTest itkConstantPadImageTest)
 ADD_TEST(itkWrapPadImageTest itkWrapPadImageTest)
 ADD_TEST(itkMirrorPadImageTest itkMirrorPadImageTest)
@@ -161,6 +162,7 @@ ADD_EXECUTABLE(itkReflectiveImageRegionIteratorTest itkReflectiveImageRegionIter
 ADD_EXECUTABLE(itkResampleImageTest itkResampleImageTest )
 ADD_EXECUTABLE(itkRecursiveGaussianImageFiltersTest itkRecursiveGaussianImageFiltersTest )
 ADD_EXECUTABLE(itkShrinkImageTest itkShrinkImageTest)
+ADD_EXECUTABLE(itkStatisticsImageFilterTest itkStatisticsImageFilterTest)
 ADD_EXECUTABLE(itkConstantPadImageTest itkConstantPadImageTest)
 ADD_EXECUTABLE(itkWrapPadImageTest itkWrapPadImageTest)
 ADD_EXECUTABLE(itkMirrorPadImageTest itkMirrorPadImageTest)
