ENH: Test for the new itkArray class added.

--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -15,6 +15,7 @@ ENDIF (TCL_TCLSH)
 ADD_TEST(itkAdaptorComparisonTest itkAdaptorComparisonTest)
 ADD_TEST(itkAffineTransformTest itkAffineTransformTest)
 ADD_TEST(itkArrayTest itkArrayTest)
+ADD_TEST(itkArray2Test itkArray2Test)
 ADD_TEST(itkAzimuthElevationToCartesianTransformTest itkAzimuthElevationToCartesianTransformTest)
 ADD_TEST(itkBinaryThresholdImageFunctionTest itkBinaryThresholdImageFunctionTest)
 ADD_TEST(itkBoundingBoxTest itkBoundingBoxTest)
@@ -72,6 +73,7 @@ ADD_TEST(itkSymmetricEllipsoidInteriorExteriorSpatialFunctionTest itkSymmetricEl
 ADD_EXECUTABLE(itkAdaptorComparisonTest itkAdaptorComparisonTest)
 ADD_EXECUTABLE(itkAffineTransformTest itkAffineTransformTest)
 ADD_EXECUTABLE(itkArrayTest itkArrayTest)
+ADD_EXECUTABLE(itkArray2Test itkArray2Test)
 ADD_EXECUTABLE(itkAzimuthElevationToCartesianTransformTest itkAzimuthElevationToCartesianTransformTest)
 ADD_EXECUTABLE(itkBinaryThresholdImageFunctionTest itkBinaryThresholdImageFunctionTest)
 ADD_EXECUTABLE(itkBoundingBoxTest itkBoundingBoxTest)
