--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -41,37 +41,38 @@ ADD_TEST(itkSimpleFuzzyConnectednessScalarImageFilterTest itkSimpleFuzzyConnecte
 ADD_TEST(itkHistogramMatchingImageFilterTest itkHistogramMatchingImageFilterTest)
 ADD_TEST(itkImageMapperTest itkImageMapperTest)
 ADD_TEST(itkImageMomentsTest itkImageMomentsTest)
-ADD_TEST(itkImageToImageAffineMeanSquaresGradientDescentRegistrationTest itkImageToImageAffineMeanSquaresGradientDescentRegistrationTest)
-ADD_TEST(itkImageToImageAffineMeanSquaresRegularStepGradientDescentRegistrationTest itkImageToImageAffineMeanSquaresRegularStepGradientDescentRegistrationTest)
-ADD_TEST(itkImageToImageAffineMutualInformationGradientDescentRegistrationTest itkImageToImageAffineMutualInformationGradientDescentRegistrationTest)
-ADD_TEST(itkImageToImageAffineNormalizedCorrelationGradientDescentRegistrationTest itkImageToImageAffineNormalizedCorrelationGradientDescentRegistrationTest)
-ADD_TEST(itkImageToImageAffineNormalizedCorrelationRegularStepGradientDescentRegistrationTest itkImageToImageAffineNormalizedCorrelationRegularStepGradientDescentRegistrationTest)
-ADD_TEST(itkImageToImageAffinePatternIntensityRegularStepGradientDescentRegistrationTest itkImageToImageAffinePatternIntensityRegularStepGradientDescentRegistrationTest)
-ADD_TEST(itkImageToImageRigidMutualInformationGradientDescentRegistrationTest itkImageToImageRigidMutualInformationGradientDescentRegistrationTest)
-ADD_TEST(itkImageToImageTranslationMeanSquaresGradientDescentRegistrationTest itkImageToImageTranslationMeanSquaresGradientDescentRegistrationTest)
-ADD_TEST(itkImageToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest itkImageToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest)
-ADD_TEST(itkImageToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest itkImageToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest)
-ADD_TEST(itkImageToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest itkImageToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest)
+# ADD_TEST(itkImageToImageAffineMeanSquaresGradientDescentRegistrationTest itkImageToImageAffineMeanSquaresGradientDescentRegistrationTest)
+# ADD_TEST(itkImageToImageAffineMeanSquaresRegularStepGradientDescentRegistrationTest itkImageToImageAffineMeanSquaresRegularStepGradientDescentRegistrationTest)
+# ADD_TEST(itkImageToImageAffineMutualInformationGradientDescentRegistrationTest itkImageToImageAffineMutualInformationGradientDescentRegistrationTest)
+# ADD_TEST(itkImageToImageAffineNormalizedCorrelationGradientDescentRegistrationTest itkImageToImageAffineNormalizedCorrelationGradientDescentRegistrationTest)
+# ADD_TEST(itkImageToImageAffineNormalizedCorrelationRegularStepGradientDescentRegistrationTest itkImageToImageAffineNormalizedCorrelationRegularStepGradientDescentRegistrationTest)
+# ADD_TEST(itkImageToImageAffinePatternIntensityRegularStepGradientDescentRegistrationTest itkImageToImageAffinePatternIntensityRegularStepGradientDescentRegistrationTest)
+# ADD_TEST(itkImageToImageRigidMutualInformationGradientDescentRegistrationTest itkImageToImageRigidMutualInformationGradientDescentRegistrationTest)
+# ADD_TEST(itkImageToImageTranslationMeanSquaresGradientDescentRegistrationTest itkImageToImageTranslationMeanSquaresGradientDescentRegistrationTest)
+# ADD_TEST(itkImageToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest itkImageToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest)
+# ADD_TEST(itkImageToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest itkImageToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest)
+# ADD_TEST(itkImageToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest itkImageToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest)
 ADD_TEST(itkInterpolateTest itkInterpolateTest)
 ADD_TEST(itkKalmanLinearEstimatorTest itkKalmanLinearEstimatorTest)
 ADD_TEST(itkLevelSet2DFunctionTest itkLevelSet2DFunctionTest)
 ADD_TEST(itkLevelSetShapeDetectionTest itkLevelSetShapeDetectionTest)
+# ADD_TEST(itkMeanSquaresImageMetricTest itkMeanSquaresImageMetricTest)
 ADD_TEST(itkMinimumMaximumImageCalculatorTest itkMinimumMaximumImageCalculatorTest)
 ADD_TEST(itkMinMaxCurvatureFlowImageFilterTest itkMinMaxCurvatureFlowImageFilterTest)
 ADD_TEST(itkMRFLabellerTest itkMRFLabellerTest)
 ADD_TEST(itkMultiResolutionPyramidImageFilterTest itkMultiResolutionPyramidImageFilterTest)
 ADD_TEST(itkRecursiveMultiResolutionPyramidImageFilterTest itkRecursiveMultiResolutionPyramidImageFilterTest)
-ADD_TEST(itkMultiResolutionPDEDeformableRegistrationTest itkMultiResolutionPDEDeformableRegistrationTest)
-ADD_TEST(itkMultiResolutionMutualInformationRigidRegistrationTest itkMultiResolutionMutualInformationRigidRegistrationTest)
-ADD_TEST(itkMultiResolutionMutualInformationAffineRegistrationTest itkMultiResolutionMutualInformationAffineRegistrationTest)
-ADD_TEST(itkMutualInformationMetricTest itkMutualInformationMetricTest)
+# ADD_TEST(itkMultiResolutionPDEDeformableRegistrationTest itkMultiResolutionPDEDeformableRegistrationTest)
+# ADD_TEST(itkMultiResolutionMutualInformationRigidRegistrationTest itkMultiResolutionMutualInformationRigidRegistrationTest)
+# ADD_TEST(itkMultiResolutionMutualInformationAffineRegistrationTest itkMultiResolutionMutualInformationAffineRegistrationTest)
+# ADD_TEST(itkMutualInformationMetricTest itkMutualInformationMetricTest)
 ADD_TEST(itkNewTest itkNewTest)
 ADD_TEST(itkOtsuThresholdImageCalculatorTest itkOtsuThresholdImageCalculatorTest)
-ADD_TEST(itkPointSetToImageTranslationMeanSquaresGradientDescentRegistrationTest  itkPointSetToImageTranslationMeanSquaresGradientDescentRegistrationTest)
-ADD_TEST(itkPointSetToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest itkPointSetToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest)
-ADD_TEST(itkPointSetToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest itkPointSetToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest)
-ADD_TEST(itkPointSetToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest itkPointSetToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest)
-ADD_TEST(itkPointSetToImageTranslationPatternIntensityRegularStepGradientDescentRegistrationTest itkPointSetToImageTranslationPatternIntensityRegularStepGradientDescentRegistrationTest)
+# ADD_TEST(itkPointSetToImageTranslationMeanSquaresGradientDescentRegistrationTest  itkPointSetToImageTranslationMeanSquaresGradientDescentRegistrationTest)
+# ADD_TEST(itkPointSetToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest itkPointSetToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest)
+# ADD_TEST(itkPointSetToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest itkPointSetToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest)
+# ADD_TEST(itkPointSetToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest itkPointSetToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest)
+# ADD_TEST(itkPointSetToImageTranslationPatternIntensityRegularStepGradientDescentRegistrationTest itkPointSetToImageTranslationPatternIntensityRegularStepGradientDescentRegistrationTest)
 ADD_TEST(itkRegionGrow2DTest itkRegionGrow2DTest)
 ADD_TEST(itkSupervisedClassifierTest itkSupervisedClassifierTest)
 ADD_TEST(itkUnsupervisedClassifierTest itkUnsupervisedClassifierTest)
@@ -95,37 +96,38 @@ ADD_EXECUTABLE(itkSimpleFuzzyConnectednessScalarImageFilterTest itkSimpleFuzzyCo
 ADD_EXECUTABLE(itkHistogramMatchingImageFilterTest itkHistogramMatchingImageFilterTest)
 ADD_EXECUTABLE(itkImageMapperTest itkImageMapperTest)
 ADD_EXECUTABLE(itkImageMomentsTest itkImageMomentsTest)
-ADD_EXECUTABLE(itkImageToImageAffineMeanSquaresGradientDescentRegistrationTest itkImageToImageAffineMeanSquaresGradientDescentRegistrationTest)
-ADD_EXECUTABLE(itkImageToImageAffineMeanSquaresRegularStepGradientDescentRegistrationTest itkImageToImageAffineMeanSquaresRegularStepGradientDescentRegistrationTest)
-ADD_EXECUTABLE(itkImageToImageAffineMutualInformationGradientDescentRegistrationTest itkImageToImageAffineMutualInformationGradientDescentRegistrationTest)
-ADD_EXECUTABLE(itkImageToImageAffineNormalizedCorrelationGradientDescentRegistrationTest itkImageToImageAffineNormalizedCorrelationGradientDescentRegistrationTest)
-ADD_EXECUTABLE(itkImageToImageAffineNormalizedCorrelationRegularStepGradientDescentRegistrationTest itkImageToImageAffineNormalizedCorrelationRegularStepGradientDescentRegistrationTest)
-ADD_EXECUTABLE(itkImageToImageAffinePatternIntensityRegularStepGradientDescentRegistrationTest itkImageToImageAffinePatternIntensityRegularStepGradientDescentRegistrationTest)
-ADD_EXECUTABLE(itkImageToImageRigidMutualInformationGradientDescentRegistrationTest itkImageToImageRigidMutualInformationGradientDescentRegistrationTest)
-ADD_EXECUTABLE(itkImageToImageTranslationMeanSquaresGradientDescentRegistrationTest itkImageToImageTranslationMeanSquaresGradientDescentRegistrationTest)
-ADD_EXECUTABLE(itkImageToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest itkImageToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest)
-ADD_EXECUTABLE(itkImageToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest itkImageToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest)
-ADD_EXECUTABLE(itkImageToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest itkImageToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest)
-ADD_EXECUTABLE(itkPointSetToImageRigid3DPatternIntensityRegularStepGradientDescentRegistrationTest  itkPointSetToImageRigid3DPatternIntensityRegularStepGradientDescentRegistrationTest)
-ADD_EXECUTABLE(itkPointSetToImageTranslationMeanSquaresGradientDescentRegistrationTest  itkPointSetToImageTranslationMeanSquaresGradientDescentRegistrationTest)
-ADD_EXECUTABLE(itkPointSetToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest itkPointSetToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest)
-ADD_EXECUTABLE(itkPointSetToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest itkPointSetToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest)
-ADD_EXECUTABLE(itkPointSetToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest itkPointSetToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest)
-ADD_EXECUTABLE(itkPointSetToImageTranslationPatternIntensityRegularStepGradientDescentRegistrationTest itkPointSetToImageTranslationPatternIntensityRegularStepGradientDescentRegistrationTest)
+# ADD_EXECUTABLE(itkImageToImageAffineMeanSquaresGradientDescentRegistrationTest itkImageToImageAffineMeanSquaresGradientDescentRegistrationTest)
+# ADD_EXECUTABLE(itkImageToImageAffineMeanSquaresRegularStepGradientDescentRegistrationTest itkImageToImageAffineMeanSquaresRegularStepGradientDescentRegistrationTest)
+# ADD_EXECUTABLE(itkImageToImageAffineMutualInformationGradientDescentRegistrationTest itkImageToImageAffineMutualInformationGradientDescentRegistrationTest)
+# ADD_EXECUTABLE(itkImageToImageAffineNormalizedCorrelationGradientDescentRegistrationTest itkImageToImageAffineNormalizedCorrelationGradientDescentRegistrationTest)
+# ADD_EXECUTABLE(itkImageToImageAffineNormalizedCorrelationRegularStepGradientDescentRegistrationTest itkImageToImageAffineNormalizedCorrelationRegularStepGradientDescentRegistrationTest)
+# ADD_EXECUTABLE(itkImageToImageAffinePatternIntensityRegularStepGradientDescentRegistrationTest itkImageToImageAffinePatternIntensityRegularStepGradientDescentRegistrationTest)
+# ADD_EXECUTABLE(itkImageToImageRigidMutualInformationGradientDescentRegistrationTest itkImageToImageRigidMutualInformationGradientDescentRegistrationTest)
+# ADD_EXECUTABLE(itkImageToImageTranslationMeanSquaresGradientDescentRegistrationTest itkImageToImageTranslationMeanSquaresGradientDescentRegistrationTest)
+# ADD_EXECUTABLE(itkImageToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest itkImageToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest)
+# ADD_EXECUTABLE(itkImageToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest itkImageToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest)
+# ADD_EXECUTABLE(itkImageToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest itkImageToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest)
+# ADD_EXECUTABLE(itkPointSetToImageRigid3DPatternIntensityRegularStepGradientDescentRegistrationTest  itkPointSetToImageRigid3DPatternIntensityRegularStepGradientDescentRegistrationTest)
+# ADD_EXECUTABLE(itkPointSetToImageTranslationMeanSquaresGradientDescentRegistrationTest  itkPointSetToImageTranslationMeanSquaresGradientDescentRegistrationTest)
+# ADD_EXECUTABLE(itkPointSetToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest itkPointSetToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest)
+# ADD_EXECUTABLE(itkPointSetToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest itkPointSetToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest)
+# ADD_EXECUTABLE(itkPointSetToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest itkPointSetToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest)
+# ADD_EXECUTABLE(itkPointSetToImageTranslationPatternIntensityRegularStepGradientDescentRegistrationTest itkPointSetToImageTranslationPatternIntensityRegularStepGradientDescentRegistrationTest)
 ADD_EXECUTABLE(itkSphereSourceTest itkSphereSourceTest)
 ADD_EXECUTABLE(itkInterpolateTest itkInterpolateTest)
 ADD_EXECUTABLE(itkKalmanLinearEstimatorTest itkKalmanLinearEstimatorTest)
 ADD_EXECUTABLE(itkLevelSet2DFunctionTest itkLevelSet2DFunctionTest)
 ADD_EXECUTABLE(itkLevelSetShapeDetectionTest itkLevelSetShapeDetectionTest)
+# ADD_EXECUTABLE(itkMeanSquaresImageMetricTest itkMeanSquaresImageMetricTest)
 ADD_EXECUTABLE(itkMinimumMaximumImageCalculatorTest itkMinimumMaximumImageCalculatorTest)
 ADD_EXECUTABLE(itkMinMaxCurvatureFlowImageFilterTest itkMinMaxCurvatureFlowImageFilterTest)
 ADD_EXECUTABLE(itkMRFLabellerTest itkMRFLabellerTest)
 ADD_EXECUTABLE(itkMultiResolutionPyramidImageFilterTest itkMultiResolutionPyramidImageFilterTest)
 ADD_EXECUTABLE(itkRecursiveMultiResolutionPyramidImageFilterTest itkRecursiveMultiResolutionPyramidImageFilterTest)
-ADD_EXECUTABLE(itkMultiResolutionPDEDeformableRegistrationTest itkMultiResolutionPDEDeformableRegistrationTest)
-ADD_EXECUTABLE(itkMultiResolutionMutualInformationRigidRegistrationTest itkMultiResolutionMutualInformationRigidRegistrationTest)
-ADD_EXECUTABLE(itkMultiResolutionMutualInformationAffineRegistrationTest itkMultiResolutionMutualInformationAffineRegistrationTest)
-ADD_EXECUTABLE(itkMutualInformationMetricTest itkMutualInformationMetricTest)
+# ADD_EXECUTABLE(itkMultiResolutionPDEDeformableRegistrationTest itkMultiResolutionPDEDeformableRegistrationTest)
+# ADD_EXECUTABLE(itkMultiResolutionMutualInformationRigidRegistrationTest itkMultiResolutionMutualInformationRigidRegistrationTest)
+# ADD_EXECUTABLE(itkMultiResolutionMutualInformationAffineRegistrationTest itkMultiResolutionMutualInformationAffineRegistrationTest)
+# ADD_EXECUTABLE(itkMutualInformationMetricTest itkMutualInformationMetricTest)
 ADD_EXECUTABLE(itkNewTest itkNewTest)
 ADD_EXECUTABLE(itkOtsuThresholdImageCalculatorTest itkOtsuThresholdImageCalculatorTest)
 ADD_EXECUTABLE(itkRegionGrow2DTest itkRegionGrow2DTest)
