--- a/Testing/Code/Numerics/CMakeLists.txt
+++ b/Testing/Code/Numerics/CMakeLists.txt
@@ -8,26 +8,29 @@ ENDIF (TCL_TCLSH)
 
 ADD_TEST(itkAmoebaOptimizerTest itkAmoebaOptimizerTest)
 ADD_TEST(itkConjugateGradientOptimizerTest itkConjugateGradientOptimizerTest)
-# ADD_TEST(itkGradientDescentOptimizerTest itkGradientDescentOptimizerTest)
+ADD_TEST(itkGradientDescentOptimizerTest itkGradientDescentOptimizerTest)
 ADD_TEST(itkLevenbergMarquardtOptimizerTest itkLevenbergMarquardtOptimizerTest)
 ADD_TEST(itkLBFGSOptimizerTest itkLBFGSOptimizerTest)
 ADD_TEST(itkNumericsHeaderTest itkNumericsHeaderTest)
 ADD_TEST(itkNumericsTest itkNumericsTest)
-# ADD_TEST(itkRegularStepGradientDescentOptimizerTest itkRegularStepGradientDescentOptimizerTest)
-# ADD_TEST(itkVersorTransformOptimizerTest itkVersorTransformOptimizerTest)
+ADD_TEST(itkOptimizersHierarchyTest itkOptimizersHierarchyTest)
+ADD_TEST(itkRegularStepGradientDescentOptimizerTest itkRegularStepGradientDescentOptimizerTest)
+ADD_TEST(itkVersorTransformOptimizerTest itkVersorTransformOptimizerTest)
 
 LINK_LIBRARIES (
 ITKCommon
+ITKNumerics
 )
 
 ADD_EXECUTABLE(itkAmoebaOptimizerTest itkAmoebaOptimizerTest)
 ADD_EXECUTABLE(itkConjugateGradientOptimizerTest itkConjugateGradientOptimizerTest)
-# ADD_EXECUTABLE(itkGradientDescentOptimizerTest itkGradientDescentOptimizerTest)
+ADD_EXECUTABLE(itkGradientDescentOptimizerTest itkGradientDescentOptimizerTest)
 ADD_EXECUTABLE(itkLevenbergMarquardtOptimizerTest itkLevenbergMarquardtOptimizerTest)
 ADD_EXECUTABLE(itkLBFGSOptimizerTest itkLBFGSOptimizerTest)
 ADD_EXECUTABLE(itkNumericsHeaderTest itkNumericsHeaderTest)
 ADD_EXECUTABLE(itkNumericsTest itkNumericsTest)
-# ADD_EXECUTABLE(itkRegularStepGradientDescentOptimizerTest itkRegularStepGradientDescentOptimizerTest )
-# ADD_EXECUTABLE(itkVersorTransformOptimizerTest itkVersorTransformOptimizerTest)
+ADD_EXECUTABLE(itkOptimizersHierarchyTest itkOptimizersHierarchyTest)
+ADD_EXECUTABLE(itkRegularStepGradientDescentOptimizerTest itkRegularStepGradientDescentOptimizerTest )
+ADD_EXECUTABLE(itkVersorTransformOptimizerTest itkVersorTransformOptimizerTest)
 
 
