ENH: Added ShiftScaleImageFilterTest.

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -73,6 +73,7 @@ ADD_TEST(itkReflectiveImageRegionIteratorTest  itkReflectiveImageRegionIteratorT
 ADD_TEST(itkReflectImageFilterTest itkReflectImageFilterTest)
 ADD_TEST(itkResampleImageTest itkResampleImageTest)
 ADD_TEST(itkRecursiveGaussianImageFiltersTest itkRecursiveGaussianImageFiltersTest)
+ADD_TEST(itkShiftScaleImageFilterTest itkShiftScaleImageFilterTest)
 ADD_TEST(itkShrinkImageTest itkShrinkImageTest)
 ADD_TEST(itkStatisticsImageFilterTest itkStatisticsImageFilterTest)
 ADD_TEST(itkConstantPadImageTest itkConstantPadImageTest)
@@ -161,6 +162,7 @@ ADD_EXECUTABLE(itkReflectImageFilterTest itkReflectImageFilterTest)
 ADD_EXECUTABLE(itkReflectiveImageRegionIteratorTest itkReflectiveImageRegionIteratorTest )
 ADD_EXECUTABLE(itkResampleImageTest itkResampleImageTest )
 ADD_EXECUTABLE(itkRecursiveGaussianImageFiltersTest itkRecursiveGaussianImageFiltersTest )
+ADD_EXECUTABLE(itkShiftScaleImageFilterTest itkShiftScaleImageFilterTest)
 ADD_EXECUTABLE(itkShrinkImageTest itkShrinkImageTest)
 ADD_EXECUTABLE(itkStatisticsImageFilterTest itkStatisticsImageFilterTest)
 ADD_EXECUTABLE(itkConstantPadImageTest itkConstantPadImageTest)
