ENH: itkMeanSquaresImageMetricTest is back

--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -56,7 +56,7 @@ ADD_TEST(itkInterpolateTest itkInterpolateTest)
 ADD_TEST(itkKalmanLinearEstimatorTest itkKalmanLinearEstimatorTest)
 ADD_TEST(itkLevelSet2DFunctionTest itkLevelSet2DFunctionTest)
 ADD_TEST(itkLevelSetShapeDetectionTest itkLevelSetShapeDetectionTest)
-# ADD_TEST(itkMeanSquaresImageMetricTest itkMeanSquaresImageMetricTest)
+ADD_TEST(itkMeanSquaresImageMetricTest itkMeanSquaresImageMetricTest)
 ADD_TEST(itkMinimumMaximumImageCalculatorTest itkMinimumMaximumImageCalculatorTest)
 ADD_TEST(itkMinMaxCurvatureFlowImageFilterTest itkMinMaxCurvatureFlowImageFilterTest)
 ADD_TEST(itkMRFLabellerTest itkMRFLabellerTest)
@@ -118,7 +118,7 @@ ADD_EXECUTABLE(itkInterpolateTest itkInterpolateTest)
 ADD_EXECUTABLE(itkKalmanLinearEstimatorTest itkKalmanLinearEstimatorTest)
 ADD_EXECUTABLE(itkLevelSet2DFunctionTest itkLevelSet2DFunctionTest)
 ADD_EXECUTABLE(itkLevelSetShapeDetectionTest itkLevelSetShapeDetectionTest)
-# ADD_EXECUTABLE(itkMeanSquaresImageMetricTest itkMeanSquaresImageMetricTest)
+ADD_EXECUTABLE(itkMeanSquaresImageMetricTest itkMeanSquaresImageMetricTest)
 ADD_EXECUTABLE(itkMinimumMaximumImageCalculatorTest itkMinimumMaximumImageCalculatorTest)
 ADD_EXECUTABLE(itkMinMaxCurvatureFlowImageFilterTest itkMinMaxCurvatureFlowImageFilterTest)
 ADD_EXECUTABLE(itkMRFLabellerTest itkMRFLabellerTest)
