ENH: Test for ImageRegistrationMethod added.

--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -52,6 +52,7 @@ ADD_TEST(itkImageMomentsTest itkImageMomentsTest)
 # ADD_TEST(itkImageToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest itkImageToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest)
 # ADD_TEST(itkImageToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest itkImageToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest)
 # ADD_TEST(itkImageToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest itkImageToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest)
+ADD_TEST(itkImageRegistrationMethodTest itkImageRegistrationMethodTest)
 ADD_TEST(itkInterpolateTest itkInterpolateTest)
 ADD_TEST(itkKalmanLinearEstimatorTest itkKalmanLinearEstimatorTest)
 ADD_TEST(itkLevelSet2DFunctionTest itkLevelSet2DFunctionTest)
@@ -114,6 +115,7 @@ ADD_EXECUTABLE(itkImageMomentsTest itkImageMomentsTest)
 # ADD_EXECUTABLE(itkPointSetToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest itkPointSetToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest)
 # ADD_EXECUTABLE(itkPointSetToImageTranslationPatternIntensityRegularStepGradientDescentRegistrationTest itkPointSetToImageTranslationPatternIntensityRegularStepGradientDescentRegistrationTest)
 ADD_EXECUTABLE(itkSphereSourceTest itkSphereSourceTest)
+ADD_EXECUTABLE(itkImageRegistrationMethodTest itkImageRegistrationMethodTest)
 ADD_EXECUTABLE(itkInterpolateTest itkInterpolateTest)
 ADD_EXECUTABLE(itkKalmanLinearEstimatorTest itkKalmanLinearEstimatorTest)
 ADD_EXECUTABLE(itkLevelSet2DFunctionTest itkLevelSet2DFunctionTest)
