ENH: Added test for combinations of the Detemplated Registration Framework.

--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -52,7 +52,11 @@ ADD_TEST(itkImageMomentsTest itkImageMomentsTest)
 # ADD_TEST(itkImageToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest itkImageToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest)
 # ADD_TEST(itkImageToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest itkImageToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest)
 # ADD_TEST(itkImageToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest itkImageToImageTranslationNormalizedCorrelationRegularStepGradientDescentRegistrationTest)
-ADD_TEST(itkImageRegistrationMethodTest itkImageRegistrationMethodTest)
+ADD_TEST(itkImageRegistrationMethodTest   itkImageRegistrationMethodTest  )
+ADD_TEST(itkImageRegistrationMethodTest_1 itkImageRegistrationMethodTest_1)
+ADD_TEST(itkImageRegistrationMethodTest_2 itkImageRegistrationMethodTest_2)
+ADD_TEST(itkImageRegistrationMethodTest_3 itkImageRegistrationMethodTest_3)
+ADD_TEST(itkImageRegistrationMethodTest_4 itkImageRegistrationMethodTest_4)
 ADD_TEST(itkInterpolateTest itkInterpolateTest)
 ADD_TEST(itkKalmanLinearEstimatorTest itkKalmanLinearEstimatorTest)
 ADD_TEST(itkLevelSet2DFunctionTest itkLevelSet2DFunctionTest)
@@ -116,6 +120,10 @@ ADD_EXECUTABLE(itkImageMomentsTest itkImageMomentsTest)
 # ADD_EXECUTABLE(itkPointSetToImageTranslationPatternIntensityRegularStepGradientDescentRegistrationTest itkPointSetToImageTranslationPatternIntensityRegularStepGradientDescentRegistrationTest)
 ADD_EXECUTABLE(itkSphereSourceTest itkSphereSourceTest)
 ADD_EXECUTABLE(itkImageRegistrationMethodTest itkImageRegistrationMethodTest)
+ADD_EXECUTABLE(itkImageRegistrationMethodTest_1 itkImageRegistrationMethodTest_1)
+ADD_EXECUTABLE(itkImageRegistrationMethodTest_2 itkImageRegistrationMethodTest_2)
+ADD_EXECUTABLE(itkImageRegistrationMethodTest_3 itkImageRegistrationMethodTest_3)
+ADD_EXECUTABLE(itkImageRegistrationMethodTest_4 itkImageRegistrationMethodTest_4)
 ADD_EXECUTABLE(itkInterpolateTest itkInterpolateTest)
 ADD_EXECUTABLE(itkKalmanLinearEstimatorTest itkKalmanLinearEstimatorTest)
 ADD_EXECUTABLE(itkLevelSet2DFunctionTest itkLevelSet2DFunctionTest)
