ENH: Tests for the registration framework added.

--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -57,6 +57,14 @@ ADD_TEST(itkImageRegistrationMethodTest_1 itkImageRegistrationMethodTest_1)
 ADD_TEST(itkImageRegistrationMethodTest_2 itkImageRegistrationMethodTest_2)
 ADD_TEST(itkImageRegistrationMethodTest_3 itkImageRegistrationMethodTest_3)
 ADD_TEST(itkImageRegistrationMethodTest_4 itkImageRegistrationMethodTest_4)
+ADD_TEST(itkImageRegistrationMethodTest_5 itkImageRegistrationMethodTest_5)
+ADD_TEST(itkImageRegistrationMethodTest_6 itkImageRegistrationMethodTest_6)
+ADD_TEST(itkImageRegistrationMethodTest_7 itkImageRegistrationMethodTest_7)
+ADD_TEST(itkImageRegistrationMethodTest_8 itkImageRegistrationMethodTest_8)
+ADD_TEST(itkImageRegistrationMethodTest_9 itkImageRegistrationMethodTest_9)
+ADD_TEST(itkImageRegistrationMethodTest_10 itkImageRegistrationMethodTest_10)
+ADD_TEST(itkImageRegistrationMethodTest_11 itkImageRegistrationMethodTest_11)
+ADD_TEST(itkImageRegistrationMethodTest_12 itkImageRegistrationMethodTest_12)
 ADD_TEST(itkInterpolateTest itkInterpolateTest)
 ADD_TEST(itkKalmanLinearEstimatorTest itkKalmanLinearEstimatorTest)
 ADD_TEST(itkLevelSet2DFunctionTest itkLevelSet2DFunctionTest)
@@ -72,7 +80,9 @@ ADD_TEST(itkRecursiveMultiResolutionPyramidImageFilterTest itkRecursiveMultiReso
 # ADD_TEST(itkMultiResolutionMutualInformationAffineRegistrationTest itkMultiResolutionMutualInformationAffineRegistrationTest)
 # ADD_TEST(itkMutualInformationMetricTest itkMutualInformationMetricTest)
 ADD_TEST(itkNewTest itkNewTest)
+ADD_TEST(itkNormalizedCorrelationImageMetricTest itkNormalizedCorrelationImageMetricTest)
 ADD_TEST(itkOtsuThresholdImageCalculatorTest itkOtsuThresholdImageCalculatorTest)
+ADD_TEST(itkPatternIntensityImageMetricTest  itkPatternIntensityImageMetricTest)
 # ADD_TEST(itkPointSetToImageTranslationMeanSquaresGradientDescentRegistrationTest  itkPointSetToImageTranslationMeanSquaresGradientDescentRegistrationTest)
 # ADD_TEST(itkPointSetToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest itkPointSetToImageTranslationMeanSquaresRegularStepGradientDescentRegistrationTest)
 # ADD_TEST(itkPointSetToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest itkPointSetToImageTranslationNormalizedCorrelationGradientDescentRegistrationTest)
@@ -124,6 +134,14 @@ ADD_EXECUTABLE(itkImageRegistrationMethodTest_1 itkImageRegistrationMethodTest_1
 ADD_EXECUTABLE(itkImageRegistrationMethodTest_2 itkImageRegistrationMethodTest_2)
 ADD_EXECUTABLE(itkImageRegistrationMethodTest_3 itkImageRegistrationMethodTest_3)
 ADD_EXECUTABLE(itkImageRegistrationMethodTest_4 itkImageRegistrationMethodTest_4)
+ADD_EXECUTABLE(itkImageRegistrationMethodTest_5 itkImageRegistrationMethodTest_5)
+ADD_EXECUTABLE(itkImageRegistrationMethodTest_6 itkImageRegistrationMethodTest_6)
+ADD_EXECUTABLE(itkImageRegistrationMethodTest_7 itkImageRegistrationMethodTest_7)
+ADD_EXECUTABLE(itkImageRegistrationMethodTest_8 itkImageRegistrationMethodTest_8)
+ADD_EXECUTABLE(itkImageRegistrationMethodTest_9 itkImageRegistrationMethodTest_9)
+ADD_EXECUTABLE(itkImageRegistrationMethodTest_10 itkImageRegistrationMethodTest_10)
+ADD_EXECUTABLE(itkImageRegistrationMethodTest_11 itkImageRegistrationMethodTest_11)
+ADD_EXECUTABLE(itkImageRegistrationMethodTest_12 itkImageRegistrationMethodTest_12)
 ADD_EXECUTABLE(itkInterpolateTest itkInterpolateTest)
 ADD_EXECUTABLE(itkKalmanLinearEstimatorTest itkKalmanLinearEstimatorTest)
 ADD_EXECUTABLE(itkLevelSet2DFunctionTest itkLevelSet2DFunctionTest)
@@ -139,7 +157,9 @@ ADD_EXECUTABLE(itkRecursiveMultiResolutionPyramidImageFilterTest itkRecursiveMul
 # ADD_EXECUTABLE(itkMultiResolutionMutualInformationAffineRegistrationTest itkMultiResolutionMutualInformationAffineRegistrationTest)
 # ADD_EXECUTABLE(itkMutualInformationMetricTest itkMutualInformationMetricTest)
 ADD_EXECUTABLE(itkNewTest itkNewTest)
+ADD_EXECUTABLE(itkNormalizedCorrelationImageMetricTest itkNormalizedCorrelationImageMetricTest)
 ADD_EXECUTABLE(itkOtsuThresholdImageCalculatorTest itkOtsuThresholdImageCalculatorTest)
+ADD_EXECUTABLE(itkPatternIntensityImageMetricTest  itkPatternIntensityImageMetricTest)
 ADD_EXECUTABLE(itkRegionGrow2DTest itkRegionGrow2DTest)
 ADD_EXECUTABLE(itkSupervisedClassifierTest itkSupervisedClassifierTest)
 ADD_EXECUTABLE(itkUnsupervisedClassifierTest itkUnsupervisedClassifierTest)
