ENH: MutualInformationImageToImageMetric now only templated over the FixedImage and MovingImage type.

--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -78,7 +78,7 @@ ADD_TEST(itkRecursiveMultiResolutionPyramidImageFilterTest itkRecursiveMultiReso
 # ADD_TEST(itkMultiResolutionPDEDeformableRegistrationTest itkMultiResolutionPDEDeformableRegistrationTest)
 # ADD_TEST(itkMultiResolutionMutualInformationRigidRegistrationTest itkMultiResolutionMutualInformationRigidRegistrationTest)
 # ADD_TEST(itkMultiResolutionMutualInformationAffineRegistrationTest itkMultiResolutionMutualInformationAffineRegistrationTest)
-# ADD_TEST(itkMutualInformationMetricTest itkMutualInformationMetricTest)
+ADD_TEST(itkMutualInformationMetricTest itkMutualInformationMetricTest)
 ADD_TEST(itkNewTest itkNewTest)
 ADD_TEST(itkNormalizedCorrelationImageMetricTest itkNormalizedCorrelationImageMetricTest)
 ADD_TEST(itkOtsuThresholdImageCalculatorTest itkOtsuThresholdImageCalculatorTest)
@@ -155,7 +155,7 @@ ADD_EXECUTABLE(itkRecursiveMultiResolutionPyramidImageFilterTest itkRecursiveMul
 # ADD_EXECUTABLE(itkMultiResolutionPDEDeformableRegistrationTest itkMultiResolutionPDEDeformableRegistrationTest)
 # ADD_EXECUTABLE(itkMultiResolutionMutualInformationRigidRegistrationTest itkMultiResolutionMutualInformationRigidRegistrationTest)
 # ADD_EXECUTABLE(itkMultiResolutionMutualInformationAffineRegistrationTest itkMultiResolutionMutualInformationAffineRegistrationTest)
-# ADD_EXECUTABLE(itkMutualInformationMetricTest itkMutualInformationMetricTest)
+ADD_EXECUTABLE(itkMutualInformationMetricTest itkMutualInformationMetricTest)
 ADD_EXECUTABLE(itkNewTest itkNewTest)
 ADD_EXECUTABLE(itkNormalizedCorrelationImageMetricTest itkNormalizedCorrelationImageMetricTest)
 ADD_EXECUTABLE(itkOtsuThresholdImageCalculatorTest itkOtsuThresholdImageCalculatorTest)
