--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -65,6 +65,7 @@ ADD_TEST(itkImageRegistrationMethodTest_9 itkImageRegistrationMethodTest_9)
 ADD_TEST(itkImageRegistrationMethodTest_10 itkImageRegistrationMethodTest_10)
 ADD_TEST(itkImageRegistrationMethodTest_11 itkImageRegistrationMethodTest_11)
 ADD_TEST(itkImageRegistrationMethodTest_12 itkImageRegistrationMethodTest_12)
+ADD_TEST(itkImageRegistrationMethodTest_13 itkImageRegistrationMethodTest_13)
 ADD_TEST(itkInterpolateTest itkInterpolateTest)
 ADD_TEST(itkKalmanLinearEstimatorTest itkKalmanLinearEstimatorTest)
 ADD_TEST(itkLevelSet2DFunctionTest itkLevelSet2DFunctionTest)
@@ -142,6 +143,7 @@ ADD_EXECUTABLE(itkImageRegistrationMethodTest_9 itkImageRegistrationMethodTest_9
 ADD_EXECUTABLE(itkImageRegistrationMethodTest_10 itkImageRegistrationMethodTest_10)
 ADD_EXECUTABLE(itkImageRegistrationMethodTest_11 itkImageRegistrationMethodTest_11)
 ADD_EXECUTABLE(itkImageRegistrationMethodTest_12 itkImageRegistrationMethodTest_12)
+ADD_EXECUTABLE(itkImageRegistrationMethodTest_13 itkImageRegistrationMethodTest_13)
 ADD_EXECUTABLE(itkInterpolateTest itkInterpolateTest)
 ADD_EXECUTABLE(itkKalmanLinearEstimatorTest itkKalmanLinearEstimatorTest)
 ADD_EXECUTABLE(itkLevelSet2DFunctionTest itkLevelSet2DFunctionTest)
