--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -66,6 +66,7 @@ ADD_TEST(itkImageRegistrationMethodTest_10 itkImageRegistrationMethodTest_10)
 ADD_TEST(itkImageRegistrationMethodTest_11 itkImageRegistrationMethodTest_11)
 ADD_TEST(itkImageRegistrationMethodTest_12 itkImageRegistrationMethodTest_12)
 ADD_TEST(itkImageRegistrationMethodTest_13 itkImageRegistrationMethodTest_13)
+ADD_TEST(itkImageRegistrationMethodTest_14 itkImageRegistrationMethodTest_14)
 ADD_TEST(itkInterpolateTest itkInterpolateTest)
 ADD_TEST(itkKalmanLinearEstimatorTest itkKalmanLinearEstimatorTest)
 ADD_TEST(itkLevelSet2DFunctionTest itkLevelSet2DFunctionTest)
@@ -76,7 +77,7 @@ ADD_TEST(itkMinMaxCurvatureFlowImageFilterTest itkMinMaxCurvatureFlowImageFilter
 ADD_TEST(itkMRFLabellerTest itkMRFLabellerTest)
 ADD_TEST(itkMultiResolutionPyramidImageFilterTest itkMultiResolutionPyramidImageFilterTest)
 ADD_TEST(itkRecursiveMultiResolutionPyramidImageFilterTest itkRecursiveMultiResolutionPyramidImageFilterTest)
-# ADD_TEST(itkMultiResolutionPDEDeformableRegistrationTest itkMultiResolutionPDEDeformableRegistrationTest)
+ADD_TEST(itkMultiResolutionPDEDeformableRegistrationTest itkMultiResolutionPDEDeformableRegistrationTest)
 # ADD_TEST(itkMultiResolutionMutualInformationRigidRegistrationTest itkMultiResolutionMutualInformationRigidRegistrationTest)
 # ADD_TEST(itkMultiResolutionMutualInformationAffineRegistrationTest itkMultiResolutionMutualInformationAffineRegistrationTest)
 ADD_TEST(itkMutualInformationMetricTest itkMutualInformationMetricTest)
@@ -144,6 +145,7 @@ ADD_EXECUTABLE(itkImageRegistrationMethodTest_10 itkImageRegistrationMethodTest_
 ADD_EXECUTABLE(itkImageRegistrationMethodTest_11 itkImageRegistrationMethodTest_11)
 ADD_EXECUTABLE(itkImageRegistrationMethodTest_12 itkImageRegistrationMethodTest_12)
 ADD_EXECUTABLE(itkImageRegistrationMethodTest_13 itkImageRegistrationMethodTest_13)
+ADD_EXECUTABLE(itkImageRegistrationMethodTest_14 itkImageRegistrationMethodTest_14)
 ADD_EXECUTABLE(itkInterpolateTest itkInterpolateTest)
 ADD_EXECUTABLE(itkKalmanLinearEstimatorTest itkKalmanLinearEstimatorTest)
 ADD_EXECUTABLE(itkLevelSet2DFunctionTest itkLevelSet2DFunctionTest)
@@ -154,7 +156,7 @@ ADD_EXECUTABLE(itkMinMaxCurvatureFlowImageFilterTest itkMinMaxCurvatureFlowImage
 ADD_EXECUTABLE(itkMRFLabellerTest itkMRFLabellerTest)
 ADD_EXECUTABLE(itkMultiResolutionPyramidImageFilterTest itkMultiResolutionPyramidImageFilterTest)
 ADD_EXECUTABLE(itkRecursiveMultiResolutionPyramidImageFilterTest itkRecursiveMultiResolutionPyramidImageFilterTest)
-# ADD_EXECUTABLE(itkMultiResolutionPDEDeformableRegistrationTest itkMultiResolutionPDEDeformableRegistrationTest)
+ADD_EXECUTABLE(itkMultiResolutionPDEDeformableRegistrationTest itkMultiResolutionPDEDeformableRegistrationTest)
 # ADD_EXECUTABLE(itkMultiResolutionMutualInformationRigidRegistrationTest itkMultiResolutionMutualInformationRigidRegistrationTest)
 # ADD_EXECUTABLE(itkMultiResolutionMutualInformationAffineRegistrationTest itkMultiResolutionMutualInformationAffineRegistrationTest)
 ADD_EXECUTABLE(itkMutualInformationMetricTest itkMutualInformationMetricTest)
