--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -78,6 +78,8 @@ ADD_TEST(itkMRFLabellerTest itkMRFLabellerTest)
 ADD_TEST(itkMultiResolutionPyramidImageFilterTest itkMultiResolutionPyramidImageFilterTest)
 ADD_TEST(itkRecursiveMultiResolutionPyramidImageFilterTest itkRecursiveMultiResolutionPyramidImageFilterTest)
 ADD_TEST(itkMultiResolutionPDEDeformableRegistrationTest itkMultiResolutionPDEDeformableRegistrationTest)
+#ADD_TEST(itkMultiResolutionImageRegistrationMethodTest   
+#itkMultiResolutionImageRegistrationMethodTest  )
 # ADD_TEST(itkMultiResolutionMutualInformationRigidRegistrationTest itkMultiResolutionMutualInformationRigidRegistrationTest)
 # ADD_TEST(itkMultiResolutionMutualInformationAffineRegistrationTest itkMultiResolutionMutualInformationAffineRegistrationTest)
 ADD_TEST(itkMutualInformationMetricTest itkMutualInformationMetricTest)
@@ -157,6 +159,8 @@ ADD_EXECUTABLE(itkMRFLabellerTest itkMRFLabellerTest)
 ADD_EXECUTABLE(itkMultiResolutionPyramidImageFilterTest itkMultiResolutionPyramidImageFilterTest)
 ADD_EXECUTABLE(itkRecursiveMultiResolutionPyramidImageFilterTest itkRecursiveMultiResolutionPyramidImageFilterTest)
 ADD_EXECUTABLE(itkMultiResolutionPDEDeformableRegistrationTest itkMultiResolutionPDEDeformableRegistrationTest)
+#ADD_EXECUTABLE(itkMultiResolutionImageRegistrationMethodTest   
+#itkMultiResolutionImageRegistrationMethodTest  )
 # ADD_EXECUTABLE(itkMultiResolutionMutualInformationRigidRegistrationTest itkMultiResolutionMutualInformationRigidRegistrationTest)
 # ADD_EXECUTABLE(itkMultiResolutionMutualInformationAffineRegistrationTest itkMultiResolutionMutualInformationAffineRegistrationTest)
 ADD_EXECUTABLE(itkMutualInformationMetricTest itkMutualInformationMetricTest)
