ENH: moved PrintSelf into .cxx file and added to library.

--- a/Code/Numerics/CMakeLists.txt
+++ b/Code/Numerics/CMakeLists.txt
@@ -2,6 +2,7 @@ SUBDIRS(vxl Statistics FEM)
 # Sources of non-templated classes.
 SOURCE_FILES(ITKNumerics_SRCS
 itkCacheableScalarFunction
+itkCostFunction
 itkCompositeValleyFunction
 itkMultipleValuedVnlCostFunctionAdaptor
 itkMultivariateLegendrePolynomial
