ENH: reinstate multi-resolution MI registration tests.

--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -81,6 +81,10 @@ ADD_TEST(itkRecursiveMultiResolutionPyramidImageFilterTest itkRecursiveMultiReso
 ADD_TEST(itkMultiResolutionPDEDeformableRegistrationTest itkMultiResolutionPDEDeformableRegistrationTest)
 ADD_TEST(itkMultiResolutionImageRegistrationMethodTest   
 itkMultiResolutionImageRegistrationMethodTest  )
+ADD_TEST(itkMultiResolutionImageRegistrationMethodTest_1   
+itkMultiResolutionImageRegistrationMethodTest_1  )
+ADD_TEST(itkMultiResolutionImageRegistrationMethodTest_2   
+itkMultiResolutionImageRegistrationMethodTest_2  )
 # ADD_TEST(itkMultiResolutionMutualInformationRigidRegistrationTest itkMultiResolutionMutualInformationRigidRegistrationTest)
 # ADD_TEST(itkMultiResolutionMutualInformationAffineRegistrationTest itkMultiResolutionMutualInformationAffineRegistrationTest)
 ADD_TEST(itkMutualInformationMetricTest itkMutualInformationMetricTest)
@@ -162,6 +166,10 @@ ADD_EXECUTABLE(itkRecursiveMultiResolutionPyramidImageFilterTest itkRecursiveMul
 ADD_EXECUTABLE(itkMultiResolutionPDEDeformableRegistrationTest itkMultiResolutionPDEDeformableRegistrationTest)
 ADD_EXECUTABLE(itkMultiResolutionImageRegistrationMethodTest   
 itkMultiResolutionImageRegistrationMethodTest  )
+ADD_EXECUTABLE(itkMultiResolutionImageRegistrationMethodTest_1   
+itkMultiResolutionImageRegistrationMethodTest_1  )
+ADD_EXECUTABLE(itkMultiResolutionImageRegistrationMethodTest_2   
+itkMultiResolutionImageRegistrationMethodTest_2  )
 # ADD_EXECUTABLE(itkMultiResolutionMutualInformationRigidRegistrationTest itkMultiResolutionMutualInformationRigidRegistrationTest)
 # ADD_EXECUTABLE(itkMultiResolutionMutualInformationAffineRegistrationTest itkMultiResolutionMutualInformationAffineRegistrationTest)
 ADD_EXECUTABLE(itkMutualInformationMetricTest itkMutualInformationMetricTest)
