ENH: Test for GetMTime()  in the Bounding Box class was added

--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -43,6 +43,7 @@ ADD_TEST(itkMapContainerTest itkMapContainerTest)
 ADD_TEST(itkMemoryLeakTest itkMemoryLeakTest)
 ADD_TEST(itkMeshTest itkMeshTest)
 ADD_TEST(itkMeshFstreamTest itkMeshFstreamTest)
+ADD_TEST(itkModifiedTimeTest itkModifiedTimeTest)
 ADD_TEST(itkNeighborhoodTest itkNeighborhoodTest)
 ADD_TEST(itkNeighborhoodIteratorTest itkNeighborhoodIteratorTest)
 ADD_TEST(itkNeighborhoodOperatorTest itkNeighborhoodOperatorTest)
@@ -101,6 +102,7 @@ ADD_EXECUTABLE(itkMapContainerTest itkMapContainerTest)
 ADD_EXECUTABLE(itkMemoryLeakTest itkMemoryLeakTest)
 ADD_EXECUTABLE(itkMeshTest itkMeshTest)
 ADD_EXECUTABLE(itkMeshFstreamTest itkMeshFstreamTest)
+ADD_EXECUTABLE(itkModifiedTimeTest itkModifiedTimeTest)
 ADD_EXECUTABLE(itkNeighborhoodTest itkNeighborhoodTest)
 ADD_EXECUTABLE(itkNeighborhoodIteratorTest itkNeighborhoodIteratorTest)
 ADD_EXECUTABLE(itkNeighborhoodOperatorTest itkNeighborhoodOperatorTest)
